--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,6 @@
 <% if logged_in? %>
 <%= link_to "Log out", logout_path, method: "delete" %>
+<%= link_to "New Post", new_post_path %>
 <% else %>
 <%= link_to "Login", login_path %>
 <% end %>
